refactor(extension): the version specifications are handed on unread
The contract filtered blank entries out of the version attribute before handing
them over. VanillaBP drops them anyway while it scans the method, so this was a
second place with an opinion about what a specification means. It hands the
attribute on as it stands now.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>